--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ a { text-decoration: none; color: #038823; cursor: pointer; }
 a:hover { text-decoration: underline; color: #ee1821; }
 .alignCenter { text-align: center; }
 strong { font-weight: bold; }
+.dispNone { display: none; }
 
 /**** App specific styles ***/
 h1 { text-align: center; font-size: 1.5em; margin-bottom: 20px; }
@@ -72,4 +73,7 @@ button:hover { opacity: 0.75; cursor: pointer; }
 #dropZone { padding: 25px 15px; text-align: center; font-size: 20px; border: 2px dashed #3498db; background: #C9E7FC; margin-bottom: 20px; }
 #dropZone.enter { background: #C9FCCD; }
 #status { text-align: center; }
-#status span { font-size: 14px; color: #3498db;}
+#status span { font-size: 14px; color: #000; background: #EEE8AA; display: inline-block; padding: 5px; box-shadow: 1px 1px 0 0 #777; }
+
+.volumeControl { margin: 20px 0 0; }
+.volumeControl span { display: block; font-size: 12px; color: #333; }
